Use logos in the menu

--- a/site/template.handlebars
+++ b/site/template.handlebars
@@ -1,4 +1,4 @@
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,18 +22,19 @@
 				</ul>
 				<ul>
 					<li>
-						<details role="list">
-							<summary aria-haspopup="listbox" role="link" class="secondary">
-								Libraries
-							</summary>
-							<ul role="listbox">
-								<li><a
-										href="https://github.com/hnz/yaid/yaid-ts"
-									>Typescript</a></li>
-								<li><a href="https://github.com/hnz/yaid/yaid-py">Python</a></li>
-								<li><a href="https://github.com/hnz/yaid/yaid-go">Go</a></li>
-							</ul>
-						</details>
+						<a href="https://github.com/hnz/yaid/yaid-ts">
+							<img src="logo-js.svg" width="30" height="30" />
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/hnz/yaid/yaid-py">
+							<img src="logo-py.svg" width="30" height="30" />
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/hnz/yaid/yaid-go">
+							<img src="logo-go.svg" width="30" height="30" />
+						</a>
 					</li>
 				</ul>
 			</nav>
